# sales-report

./: README.md
data/: exemple2.csv
sales_report/: pyproject.toml
sales_report/sales_report/: main.py
sales_report/sales_report/app/: sales_analyzer_app.py
sales_report/sales_report/factories/: formatter_factory.py
sales_report/sales_report/filters/: date_filter.py
sales_report/sales_report/formatters/: json_formatter.py  text_formatter.py
sales_report/sales_report/interfaces/: data_filter.py  data_processor.py  data_reader.py  data_validator.py  output_formatter.py
sales_report/sales_report/processors/: sales_processor.py
sales_report/sales_report/readers/: csv_reader.py
sales_report/sales_report/utils/: date_utils.py  schema_detector.py
sales_report/sales_report/validators/: sales_validator.py
sales_report/tests/: conftest.py  test_app.py  test_integration.py
